--- a/web/views/partials/request-card-invoice-details.html
+++ b/web/views/partials/request-card-invoice-details.html
@@ -1,40 +1,43 @@
 {{ define "partials/request-card-invoice-details" }}
-    <ul class="flex flex-col gap-4 py-4 sm:flex-row sm:flex-wrap sm:gap-x-0">
-        <li class="sm:w-1/2 sm:pr-2">
+    <ul class="grid grid-cols-1 gap-4 py-4 md:grid-cols-2">
+        <li>
             <strong>Número</strong>: <span> {{ if .Number }} {{ .Number }} {{ else }} - {{ end }} </span>
         </li>
-        <li class="sm:w-1/2 sm:pl-2">
+        <li>
             <strong>Protocolo</strong>: <span> {{ if .Protocol }} {{ .Protocol }} {{ else }} - {{ end }} </span>
         </li>
-        <li class="sm:w-1/2 sm:pr-2">
+        <li>
             <strong>Operação</strong>: <span> {{ .Operation }} </span>
         </li>
-        <li class="sm:w-1/2 sm:pl-2">
+        <li>
             <strong>CFOP</strong>: <span> {{ .Cfop }} </span>
         </li>
-        <li class="sm:w-1/2 sm:pr-2">
+        <li>
             <strong>Contribuinte ICMS</strong>: <span> {{ .IsIcmsContributor }} </span>
         </li>
-        <li class="sm:w-1/2 sm:pl-2">
+        <li>
             <strong>Consumidor Final</strong>: <span> {{ .IsFinalCustomer }} </span>
         </li>
-        <li class="sm:w-1/2 sm:pr-2">
+        <li>
             <strong>Frete</strong>: <span> {{ .Shipping }} </span>
         </li>
-        <li class="sm:w-1/2 sm:pl-2">
+        <li>
             <strong>Adicionar frete ao total</strong>: <span> {{ .AddShippingToTotal }} </span>
         </li>
-        <li class="sm:w-1/2 sm:pr-2">
+        <li>
             <strong>GTA</strong>: <span> {{ if .Gta }} {{ .Gta }} {{ else }} - {{ end }} </span>
         </li>
-        <li class="sm:w-1/2 sm:pl-2">
+        <li>
             <strong>Informações complementares</strong>: <span> {{ if .ExtraNotes }} {{ .ExtraNotes }} {{ else }} - {{ end }} </span>
         </li>
-        <li class="sm:w-1/2 sm:pr-2">
+        <li>
             <strong>Nome do arquivo</strong>: <span> {{ if .CustomFileName }} {{ .CustomFileName }} {{ else }} - {{ end }} </span>
         </li>
-        <li class="sm:w-1/2 sm:pl-2">
+        <li>
             <strong>Quantidade de itens</strong>: <span> {{ len .Items }} </span>
+        </li>
+        <li>
+            <strong>IE do Remetente</strong>: <span> {{ .SenderIe }} </span>
         </li>
     </ul>
 {{ end }}
