--- a/web/v2/ui/forms/entities.templ
+++ b/web/v2/ui/forms/entities.templ
@@ -4,6 +4,7 @@ import "github.com/cayo-rodrigues/nff/web/models"
 import "strconv"
 import "fmt"
 import "github.com/cayo-rodrigues/nff/web/ui/shared"
+import "strings"
 
 templ EntityForm(e *models.Entity) {
 	<div class="sticky top-20" id="entity-form">
@@ -147,6 +148,18 @@ templ EntityForm(e *models.Entity) {
 						/>
 						<sub class="text-red-600">{ e.Errors["Number"] }</sub>
 					</div>
+				</div>
+				<div class=" flex flex-col gap-2 sm:col-span-2">
+					<label class="truncate" for="other_ies"><strong>Outras IEs</strong></label>
+					<input
+						class="rounded p-2"
+						type="text"
+						id="other_ies"
+						name="other_ies"
+						placeholder="Separe por vírgulas"
+						value={ strings.Join(e.OtherIes, ", ") }
+					/>
+					<sub class="text-red-600">{ e.Errors["OtherIes"] }</sub>
 				</div>
 			</div>
 			<div class="flex gap-6">
