feat: enhance navbar

--- a/web/v2/ui/layouts/base.templ
+++ b/web/v2/ui/layouts/base.templ
@@ -26,6 +26,7 @@ templ Base(page templ.Component) {
 				@page
 			</main>
 			@shared.Footer()
+			@shared.GlobalIndicator()
 		</body>
 	</html>
 }
