--- a/web/v2/ui/shared/icon.templ
+++ b/web/v2/ui/shared/icon.templ
@@ -4,6 +4,10 @@ templ Icon(name string) {
 	<i data-feather={ name }></i>
 }
 
+templ SmallIcon(name string) {
+	<i data-feather={ name } class="h-5 w-5"></i>
+}
+
 templ LoadingIcon() {
 	<i data-feather="loader" class="hx-indicator animate-spin text-5xl opacity-70"></i>
 }
