--- a/web/v2/ui/pages/metrics.templ
+++ b/web/v2/ui/pages/metrics.templ
@@ -1,5 +1,8 @@
 package pages
 
-templ MetricsPage() {
+import "github.com/cayo-rodrigues/nff/web/ui/forms"
+import "github.com/cayo-rodrigues/nff/web/models"
 
+templ MetricsPage(m *models.Metrics) {
+	@forms.MetricsForm(m)
 }
