--- a/web/v2/ui/forms/entities.templ
+++ b/web/v2/ui/forms/entities.templ
@@ -10,7 +10,7 @@ templ EntityForm(e *models.Entity) {
 	<div class="sticky top-20" id="entity-form">
 		<form { getHxAttrsByAction(e)... }>
 			<input type="hidden" name="id" value={ strconv.Itoa(e.ID) }/>
-			<div class="flex flex-col gap-2 py-2">
+			<div class="grid grid-cols-1 gap-2 py-2">
 				<sup class="text-red-600">{ e.Errors["Name"] }</sup>
 				<input
 					class="flex-1 rounded p-2 text-2xl font-semibold"
