--- a/web/v2/ui/shared/button.templ
+++ b/web/v2/ui/shared/button.templ
@@ -56,19 +56,17 @@ func getButtonClassesByTheme(theme string, size string) string {
 
 	switch theme {
 	case "success":
-		colors = "bg-green-400 hover:bg-green-500 active:bg-green-600"
+		colors = "bg-green-400 border-green-500 hover:bg-green-500 active:bg-green-600"
 	case "warning":
-		colors = "bg-yellow-400 hover:bg-yellow-500 active:bg-yellow-600"
+		colors = "bg-yellow-400 border-yellow-500 hover:bg-yellow-500 active:bg-yellow-600"
 	case "error":
-		colors = "bg-red-500 hover:bg-red-600 active:bg-red-700"
+		colors = "bg-red-500 border-red-600 hover:bg-red-600 active:bg-red-700"
 	case "info":
-		colors = "bg-sky-400 hover:bg-sky-500 active:bg-sky-600"
+		colors = "bg-sky-400 border-sky-500 hover:bg-sky-500 active:bg-sky-600"
 	case "default":
-		colors = "bg-gray-300 hover:bg-gray-400 active:bg-gray-500"
+		colors = "bg-gray-300 border-gray-400 hover:bg-gray-400 active:bg-gray-500"
 	case "default-outline":
-		colors = "bg-white border-gray-300 hover:bg-gray-300 active:bg-gray-400"
-	default:
-		colors = "bg-gray-400 hover:bg-gray-500 active:bg-gray-600"
+		colors = "border-gray-300 hover:bg-gray-200 active:bg-gray-300"
 	}
 
 	switch size {
