--- a/web/v2/ui/layouts/base.templ
+++ b/web/v2/ui/layouts/base.templ
@@ -18,7 +18,7 @@ templ Base(page templ.Component) {
 			@scripts.ApplyIcons()
 			<title>NFF</title>
 		</head>
-		<body class="flex h-screen flex-col bg-gray-100">
+		<body class="flex h-screen flex-col bg-gray-50 text-sm">
 			<header>
 				@shared.Nav()
 			</header>
