--- a/web/v2/ui/forms/invoices.templ
+++ b/web/v2/ui/forms/invoices.templ
@@ -182,6 +182,55 @@ templ InvoiceItemsHeading(i *models.Invoice) {
 	</heading>
 }
 
+type InputData struct {
+	ErrMsg    string
+	InputType string
+	ID        string
+	Value     string
+	Label     string
+	Attrs     templ.Attributes
+	Options   []string
+}
+
+templ Input(data *InputData) {
+	<div class="flex flex-col gap-2">
+		<label for={ data.ID }><strong>{ data.Label }</strong></label>
+		<input
+			class="rounded border border-gray-300 bg-white p-2 outline-0 focus-within:border-gray-500"
+			type={ data.InputType }
+			id={ data.ID }
+			name={ data.ID }
+			value={ data.Value }
+			{ data.Attrs... }
+		/>
+		<sub class="text-red-600">{ data.ErrMsg }</sub>
+	</div>
+}
+
+templ SelectInput(data *InputData) {
+	<div class="flex flex-col gap-2">
+		<label for={ data.ID }><strong>{ data.Label }</strong></label>
+		<select
+			class="h-10 rounded border border-gray-300 bg-white p-2 outline-0 focus-within:border-gray-500"
+			id={ data.ID }
+			name={ data.ID }
+			{ data.Attrs... }
+		>
+			for _, option := range data.Options {
+				<option
+					value={ option }
+					if data.Value == option {
+						selected
+					}
+				>
+					{ option }
+				</option>
+			}
+		</select>
+		<sub class="text-red-600">{ data.ErrMsg }</sub>
+	</div>
+}
+
 templ InvoiceItemSection(item *models.InvoiceItem, idx int) {
 	<section id={ fmt.Sprintf("item-%d", idx) } class="rounded border border-gray-600 transition hover:border-gray-700">
 		<div class="flex items-center justify-between border-b border-gray-600 bg-gray-600 p-2">
@@ -200,16 +249,20 @@ templ InvoiceItemSection(item *models.InvoiceItem, idx int) {
 			</div>
 		</div>
 		<div class="grid grid-cols-1 gap-4 rounded-b bg-white p-2 pt-4 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 2xl:grid-cols-7">
-			<div class="flex flex-col gap-2">
-				<label for="group"><strong>Grupo</strong></label>
-				<select class="h-10 rounded border border-gray-300 bg-white p-2 outline-0  focus-within:border-gray-500" id="group" name="group"></select>
-				<sub class="text-red-600">{ item.Errors["Group"] }</sub>
-			</div>
-			<div class="flex flex-col gap-2">
-				<label for="ncm"><strong>NCM</strong></label>
-				<input class="rounded border border-gray-300 bg-white p-2 outline-0  focus-within:border-gray-500" type="text" id="ncm" name="ncm" value={ item.NCM }/>
-				<sub class="text-red-600">{ item.Errors["NCM"] }</sub>
-			</div>
+			@SelectInput(&InputData{
+				ID:      "group",
+				Label:   "Grupo",
+				Value:   item.Group,
+				ErrMsg:  item.Errors["Group"],
+				Options: models.InvoiceItemGroups[:],
+			})
+			@Input(&InputData{
+				ID:        "ncm",
+				Label:     "NCM",
+				Value:     item.NCM,
+				ErrMsg:    item.Errors["NCM"],
+				InputType: "text",
+			})
 			<div class="flex flex-col gap-2">
 				<label for="description"><strong>Descrição</strong></label>
 				<input class="rounded border border-gray-300 bg-white p-2 outline-0  focus-within:border-gray-500" type="text" id="description" name="description" value={ item.Description }/>
